Адаптив страниц проекта

--- a/1.html
+++ b/1.html
@@ -8,8 +8,8 @@
 
   <title>Pine-studio. Большая квартира для семьи</title>
 
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../default-skin/default-skin.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="default-skin/default-skin.css">
   <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
 </head>
 
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="header-wrap">
         <div class="header-logo">
-          <a href="../index.html"><img src="../img/header/круглый белый внутри.png" alt=""></a>
+          <a href="index.html"><img src="img/header/круглый белый внутри.png" alt=""></a>
         </div>
         <!-- /.header-logo -->
         <div class="page-title header__title">
@@ -29,10 +29,10 @@
         <!-- /.header_title -->
         <nav class="header-nav">
           <ul class="list header-list">
-            <li class="header-list__item"><a href="../index.html" target="_blank">О нас</a></li>
-            <li class="header-list__item"><a href="../index.html#steps" target="_blank">Этапы работ</a></li>
-            <li class="header-list__item"><a href="../index.html#portfolio" target="_blank">Проекты</a></li>
-            <li class="header-list__item"><a href="../index.html#contacts" target="_blank">Контакты</a></li>
+            <li class="header-list__item"><a href="index.html#edge" target="_blank">О нас</a></li>
+            <li class="header-list__item"><a href="index.html#steps" target="_blank">Этапы работ</a></li>
+            <li class="header-list__item"><a href="index.html#portfolio" target="_blank">Проекты</a></li>
+            <li class="header-list__item"><a href="index.html#contacts" target="_blank">Контакты</a></li>
           </ul>
           <!-- /.list header-list -->
           <button class="header-burger burger_alert "><span class="header-burger__line"></span></button>
@@ -50,10 +50,10 @@
 			<div class="menu-block">
 				<nav class="menu-nav">
 					<ul class="menu-list">
-						<li class="menu-list__item"><a href="../index.html#edge">О нас</a></li>
-						<li class="menu-list__item"><a href="../index.html#steps">Этапы работ</a></li>
-						<li class="menu-list__item"><a href="../index.html#portfolio">Проекты</a></li>
-						<li class="menu-list__item"><a href="../index.html#contacts">Контакты</a></li>
+						<li class="menu-list__item"><a href="index.html#edge">О нас</a></li>
+						<li class="menu-list__item"><a href="index.html#steps">Этапы работ</a></li>
+						<li class="menu-list__item"><a href="index.html#portfolio">Проекты</a></li>
+						<li class="menu-list__item"><a href="index.html#contacts">Контакты</a></li>
 					</ul>
 				</nav>
 				<!-- /.menu-nav -->
@@ -78,12 +78,12 @@
     </div>
     <div class="arrow hero-arrow">
       <a href="#portfolio">
-        <img src="../img/hero/down.png" alt="тонкая двойная стрелка вниз">
+        <img src="img/hero/down.png" alt="тонкая двойная стрелка вниз">
       </a>
     </div>
     <!-- /.hero-arrow -->
     <div class="hero-logo">
-      <img src="../img/footer/White.png" alt="Логотип студии pine-studio">
+      <img src="img/footer/White.png" alt="Логотип студии pine-studio">
     </div>
     <!-- /.hero-logo -->
   </div>
@@ -144,176 +144,176 @@
     <div class="container">
       <div class="portfolio-cards project-portfolio_1" itemscope itemtype="http://schema.org/ImageGallery">
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/1.jpg" itemprop="contentUrl" data-size="1400x2000">
-            <img src="../img/1/render/1.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/1.jpg" itemprop="contentUrl" data-size="1400x2000">
+            <img src="img/1/render/1.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/2.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/2.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/2.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/2.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/27.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/27.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/27.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/27.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/25.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/25.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/25.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/25.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/26.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/26.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/26.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/26.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/28.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/28.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/28.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/28.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/24.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/24.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/24.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/24.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/29.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/29.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/29.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/29.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/8.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/8.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/8.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/8.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/9.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/9.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/9.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/9.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/10.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/10.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/10.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/10.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/11.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/11.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/11.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/11.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/12.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/12.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/12.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/12.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/13.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/13.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/13.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/13.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/3.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/3.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/3.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/3.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/4.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/4.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/4.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/4.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/5.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/5.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/5.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/5.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/6.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/6.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/6.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/6.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/7.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/7.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/7.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/7.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/19.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/19.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/19.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/19.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/20.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/20.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/20.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/20.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/21.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/21.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/21.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/21.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/22.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/22.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/22.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/22.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/23.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/23.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/23.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/23.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/14.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/14.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/14.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/14.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/15.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/15.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/15.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/15.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/16.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/16.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/16.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/16.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/17.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/17.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/17.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/17.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/18.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/18.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/18.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="img/1/render/18.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
@@ -376,7 +376,7 @@
       <div class="container">
         <div class="footer-wrap">
           <div class="footer-logo">
-            <a href="../index.html"><img src="../img/footer/White.png" alt=""></a>
+            <a href="index.html"><img src="img/footer/White.png" alt=""></a>
           </div>
           <!-- /.footer-logo -->
           <div class="page-title footer_title">
@@ -422,12 +422,12 @@
     <!-- /.footer -->
 
 
-  <script src="../js/photoswipe.js"></script>
-  <script src="../js/photoswipe-ui-default.js"></script>
-  <script src="../js/photoswipe-portfolio-cards.js"></script>
-  <script src="../js/jquery-3.4.1.min.js"></script>
-  <script src="../js/up.js"></script>
-  <script src="../js/arrow.js"></script>
+  <script src="js/photoswipe.js"></script>
+  <script src="js/photoswipe-ui-default.js"></script>
+  <script src="js/photoswipe-portfolio-cards.js"></script>
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/up.js"></script>
+  <script src="js/arrow.js"></script>
   <script src="js/burger.js"></script>
   <!-- <script>
     var pswpElement = document.querySelectorAll('.pswp')[0];
