--- a/2.html
+++ b/2.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Pine-studio</title>
+  <title>Pine-studio. Гостиная в классическом стиле</title>
 
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../default-skin/default-skin.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="default-skin/default-skin.css">
   <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
 </head>
 
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="header-wrap">
         <div class="header-logo">
-          <a href="../index.html"><img src="../img/header/круглый белый внутри.png" alt=""></a>
+          <a href="index.html"><img src="img/header/круглый белый внутри.png" alt=""></a>
         </div>
         <!-- /.header-logo -->
         <div class="header_title">
@@ -29,10 +29,10 @@
         <!-- /.header_title -->
         <nav class="header-nav">
           <ul class="list header-list">
-            <li class="header-list__item"><a href="../index.html#edge">О нас</a></li>
-            <li class="header-list__item"><a href="../index.html#steps">Этапы работ</a></li>
-            <li class="header-list__item"><a href="../index.html#portfolio">Проекты</a></li>
-            <li class="header-list__item"><a href="../index.html#contacts">Контакты</a></li>
+            <li class="header-list__item"><a href="index.html#edge">О нас</a></li>
+            <li class="header-list__item"><a href="index.html#steps">Этапы работ</a></li>
+            <li class="header-list__item"><a href="index.html#portfolio">Проекты</a></li>
+            <li class="header-list__item"><a href="index.html#contacts">Контакты</a></li>
           </ul>
           <!-- /.list header-list -->
           <button class="header-burger header-burger_alert"><span></span></button>
@@ -54,19 +54,19 @@
 
 
   <!-- ПЕРВИЙ ВИДИМЫй БЛОК НА СТРАНИЦЕ hero -->
-  <div class="hero project__hero project_3">
+  <div class="hero project__hero project_2">
     <div class="project__hero__content">
-      <span class="title project__title">Двухуровневая квартира в стиле минимализм</span>
-      <span class="project__subtitle">Дизайн проект - Жуминская Елена</span>
+      <span class="title project__title">Гостиная в классическом стиле</span>
+      <span class="project__subtitle">Дизайн проект - Ненашкина Евгения</span>
     </div>
     <div class="arrow hero-arrow">
       <a href="#portfolio">
-        <img src="../img/hero/down.png" alt="тонкая двойная стрелка вниз">
+        <img src="img/hero/down.png" alt="тонкая двойная стрелка вниз">
       </a>
     </div>
     <!-- /.hero-arrow -->
     <div class="hero-logo">
-      <img src="../img/footer/White.png" alt="Логотип студии pine-studio">
+      <img src="img/footer/White.png" alt="Логотип студии pine-studio">
     </div>
     <!-- /.hero-logo -->
   </div>
@@ -125,58 +125,76 @@
 
   <div class="portfolio" id="portfolio">
     <div class="container">
-      <div class="portfolio-cards project-portfolio_3" itemscope itemtype="http://schema.org/ImageGallery">
+      <div class="portfolio-cards project-portfolio_2" itemscope itemtype="http://schema.org/ImageGallery">
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/3/render/1.jpg" itemprop="contentUrl" data-size="1400x2000">
-            <img src="../img/3/render/1.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/2/render/1.jpg" itemprop="contentUrl" data-size="2000x1500">
+            <img src="img/2/render/1.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/3/render/2.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/3/render/2.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/2/render/2.jpg" itemprop="contentUrl" data-size="2000x1500">
+            <img src="img/2/render/2.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/3/render/3.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/3/render/3.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/2/render/3.jpg" itemprop="contentUrl" data-size="1900x2000">
+            <img src="img/2/render/3.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/3/render/4.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/3/render/4.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/2/render/4.jpg" itemprop="contentUrl" data-size="1900x2000">
+            <img src="img/2/render/4.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/3/render/5.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/3/render/5.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/2/render/5.jpg" itemprop="contentUrl" data-size="2000x1500">
+            <img src="img/2/render/5.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/3/render/6.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/3/render/6.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/2/render/6.jpg" itemprop="contentUrl" data-size="2000x1500">
+            <img src="img/2/render/6.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/3/render/7.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/3/render/7.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/2/render/7.jpg" itemprop="contentUrl" data-size="1800x1500">
+            <img src="img/2/render/7.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/3/render/8.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/3/render/8.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/2/render/8.jpg" itemprop="contentUrl" data-size="1800x1500">
+            <img src="img/2/render/8.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/3/render/9.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/3/render/9.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/2/render/9.jpg" itemprop="contentUrl" data-size="1800x1450">
+            <img src="img/2/render/9.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="img/2/render/10.jpg" itemprop="contentUrl" data-size="1800x1450">
+            <img src="img/2/render/10.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="img/2/render/11.jpg" itemprop="contentUrl" data-size="1800x1450">
+            <img src="img/2/render/11.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="img/2/render/12.jpg" itemprop="contentUrl" data-size="1800x1450">
+            <img src="img/2/render/12.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
@@ -239,7 +257,7 @@
     <div class="container">
       <div class="footer-wrap">
         <div class="footer-logo">
-          <a href="../index.html"><img src="../img/footer/White.png" alt=""></a>
+          <a href="index.html"><img src="img/footer/White.png" alt=""></a>
         </div>
         <!-- /.footer-logo -->
         <div class="header_title">
@@ -285,12 +303,12 @@
   <!-- /.footer -->
 
 
-  <script src="../js/photoswipe.js"></script>
-  <script src="../js/photoswipe-ui-default.js"></script>
-  <script src="../js/photoswipe-portfolio-cards.js"></script>
-  <script src="../js/jquery-3.4.1.min.js"></script>
-  <script src="../js/up.js"></script>
-  <script src="../js/arrow.js"></script>
+  <script src="js/photoswipe.js"></script>
+  <script src="js/photoswipe-ui-default.js"></script>
+  <script src="js/photoswipe-portfolio-cards.js"></script>
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/up.js"></script>
+  <script src="js/arrow.js"></script>
 
   <!-- <script>
     var pswpElement = document.querySelectorAll('.pswp')[0];
