--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@
               alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="projects/2.html" target="_blank"><img src="img/portfolio/2.jpg"
+          <a class="portfolio-card_hover" href="2.html" target="_blank"><img src="img/portfolio/2.jpg"
               alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="projects/3.html" target="_blank"><img src="img/portfolio/3.jpg"
+          <a class="portfolio-card_hover" href="3.html" target="_blank"><img src="img/portfolio/3.jpg"
               alt=""></a>
         </div>
         <div class="portfolio-card">
@@ -358,7 +358,7 @@
           <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/8.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="projects/1.html" target="_blank"><img src="img/portfolio/1.jpg" alt=""></a>
+          <a class="portfolio-card_hover" href="1.html" target="_blank"><img src="img/portfolio/1.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
           <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/10.jpg" alt=""></a>
