--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="header-wrap">
         <div class="header-logo">
-          <img src="img/header/круглый белый внутри.png" alt="">
+          <img src="img/header/circle-logo.png" alt="">
         </div>
         <!-- /.header-logo -->
         <div class="page-title header__title">
@@ -402,8 +402,8 @@
         <!-- /.compare-text -->
         <div class="compare-image">
           <div id="container2" class='twentytwenty-container'>
-            <img src="img/compare/гостиная классика 1.jpg" alt="">
-            <img src="img/compare/гостиная классика 1н.jpg" alt="">
+            <img src="img/compare/1.jpg" alt="Фотография гостинной днем. Pine-studio">
+            <img src="img/compare/2.jpg" alt="Фотография гостинной ночью. Pine studio">
           </div>
         </div>
         <!-- /.compare-image -->
