--- a/3.html
+++ b/3.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="header-wrap">
         <div class="header-logo">
-          <a href="index.html"><img src="img/header/круглый белый внутри.png" alt=""></a>
+          <a href="index.html"><img src="img/header/circle-logo.png" alt=""></a>
         </div>
         <!-- /.header-logo -->
         <div class="header_title">
